load profile images from filesystem instead of database